--- a/views/student/navbar.ejs
+++ b/views/student/navbar.ejs
@@ -330,12 +330,12 @@
     <a href="#" class="menu-item"><i class="fas fa-book"></i><span class="menu-text">Study Materials</span></a>
     <a href="#" class="menu-item"><i class="fas fa-calendar-check"></i><span class="menu-text">Attendance</span></a>
     <div class="menu-divider">Admin</div>
-    <a href="#" class="menu-item"><i class="fas fa-user-cog"></i><span class="menu-text">User Management</span></a>
+    <!-- <a href="#" class="menu-item"><i class="fas fa-user-cog"></i><span class="menu-text">User Management</span></a>
     <a href="#" class="menu-item"><i class="fas fa-chart-line"></i><span class="menu-text">Reports</span></a>
     <a href="#" class="menu-item"><i class="fas fa-cog"></i><span class="menu-text">System Settings</span></a>
     <div class="menu-divider">General</div>
     <a href="#" class="menu-item"><i class="fas fa-bullhorn"></i><span class="menu-text">Announcements</span></a>
-    <a href="#" class="menu-item"><i class="fas fa-comments"></i><span class="menu-text">Feedback</span></a>
+    <a href="#" class="menu-item"><i class="fas fa-comments"></i><span class="menu-text">Feedback</span></a> -->
   </div>
   <div class="main-content">
     <div class="top-bar">
