--- a/views/user/navbar.ejs
+++ b/views/user/navbar.ejs
@@ -252,7 +252,7 @@
               </ul>
             </li>
           </ul>
-          <div class="user_icon"><a href="#"><i class="fa fa-user"></i></a></div>
+          <div class="user_icon"><a href="/profile"><i class="fa fa-user"></i></a></div>
           <div class="user_icon"><a href="#"><i class="fa fa-search"></i></a></div>
           <div class="call_btn"><a href="#"><i class="fa fa-phone"></i><span class="padding_left10">Call : +1234567890</span></a></div>
         </div>
