--- a/views/user/navbar.ejs
+++ b/views/user/navbar.ejs
@@ -115,7 +115,7 @@
 
 
 .header_section {
-  position: sticky;
+  /* position: sticky; */
   z-index: 1000;
   top:0;
   background-color: #ffffff;
@@ -248,7 +248,7 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="/student">Student</a></li>
                 <li><a class="dropdown-item" href="/teacher">Teacher</a></li>
-                <li><a class="dropdown-item" href="#">Admin</a></li>
+                <!-- <li><a class="dropdown-item" href="#">Admin</a></li> -->
               </ul>
             </li>
           </ul>
