--- a/views/student/navbar.ejs
+++ b/views/student/navbar.ejs
@@ -329,6 +329,7 @@
     <a href="#" class="menu-item"><i class="fas fa-tasks"></i><span class="menu-text">Assignments</span></a>
     <a href="#" class="menu-item"><i class="fas fa-book"></i><span class="menu-text">Study Materials</span></a>
     <a href="#" class="menu-item"><i class="fas fa-calendar-check"></i><span class="menu-text">Attendance</span></a>
+        <a href="/stu/submission" class="menu-item"><i class="fas fa-calendar-check"></i><span class="menu-text">Submission</span></a>
     <div class="menu-divider">Admin</div>
     <!-- <a href="#" class="menu-item"><i class="fas fa-user-cog"></i><span class="menu-text">User Management</span></a>
     <a href="#" class="menu-item"><i class="fas fa-chart-line"></i><span class="menu-text">Reports</span></a>
@@ -342,7 +343,10 @@
       <div class="search-bar"><i class="fas fa-search"></i><input type="text" placeholder="Search…"></div>
       <div class="top-right">
         <div class="notification"><i class="fas fa-bell"></i><span class="notification-count">3</span></div>
-        <div class="user-profile"><img src="https://randomuser.me/api/portraits/women/65.jpg" alt="User"></div>
+       <a href="/stu/profile" class="user-profile">
+  <img src="https://randomuser.me/api/portraits/women/65.jpg" alt="User">
+</a>
+
       </div>
     </div>
 
