--- a/views/teacher/my_classes.ejs
+++ b/views/teacher/my_classes.ejs
@@ -121,15 +121,10 @@
         <div class="section-title"><i class="fas fa-plus"></i> Add Class</div>
         <form>
           <label for="className">Class Name</label>
-          <input type="text" id="className" placeholder="e.g. Physics 11" required>
+          <input type="text" id="className" placeholder="Batch Name..." required>
 
           <label for="subject">Subject</label>
-          <select id="subject">
-            <option value="">Select</option>
-            <option value="math">Math</option>
-            <option value="science">Science</option>
-            <option value="history">History</option>
-          </select>
+         <input type="text"  placeholder="Subject..." required>
 
           <label for="date">Date</label>
           <input type="date" id="date">
