--- a/views/teacher/assignment.ejs
+++ b/views/teacher/assignment.ejs
@@ -143,10 +143,10 @@
           <h5 class="mb-0">Add New Assignment</h5>
         </div>
         <div class="card-body">
-          <form action="/teacher/add-assignment" method="POST">
+          <form action="/teach/save_assignment" method="POST">
             <div class="form-group">
               <label for="batchName">Batch Name</label>
-              <input type="text" id="batchName" name="batch" placeholder="Batch Name..." class="form-control" required />
+              <input type="text" id="batchName" name="batch_name" placeholder="Batch Name..." class="form-control" required />
             </div>
             <div class="form-group">
               <label for="assignmentTitle">Title</label>
@@ -158,7 +158,7 @@
             </div>
             <div class="form-group">
               <label for="dueDate">Due Date</label>
-              <input type="date" id="dueDate" name="dueDate" class="form-control" required />
+              <input type="date" id="dueDate" name="due_date" class="form-control" required />
             </div>
             <div class="form-group">
               <label for="description">Description</label>
@@ -185,9 +185,11 @@
             </tr>
           </thead>
           <tbody>
+           
+            <%for(var i=0;i<alist.length;i++){%>
             <tr>
-              <td class="text-center">1</td>
-              <td>Batch A</td>
+              <td class="text-center"><%-i+1%></td>
+              <td><%-alist[i].batch_name%></td>
               <td>Algebra Worksheet</td>
               <td>Mathematics</td>
               <td>2024-01-15</td>
@@ -197,6 +199,10 @@
                 </a>
               </td>
             </tr>
+
+            <%}%>
+
+            
             <!-- More rows can be added dynamically -->
           </tbody>
         </table>
