--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -420,7 +420,7 @@
         }
 
         .testimonial-card::before {
-            content: """;
+            content: "";
             position: absolute;
             top: 20px;
             left: 20px;
