--- a/views/user/navbar.ejs
+++ b/views/user/navbar.ejs
@@ -1,19 +1,13 @@
 <!-- Responsive Sticky Navbar -->
 <nav class="navbar" id="navbar">
   <div class="nav-container">
-
-    
     <!-- Logo -->
-<!-- Logo -->
-<div class="logo">
-  <a href="/" aria-label="Home">
-    <img src="/Aniket2.png" alt="Logo" class="logo-img" position="absolute">
- <span class="gradient-text">Classes</span>
-
-  </a>
-</div>
-
-
+    <div class="logo">
+      <a href="/" aria-label="Home">
+        <img src="/Aniket2.png" alt="Logo" class="logo-img">
+        <span class="gradient-text">Classes</span>
+      </a>
+    </div>
 
     <!-- Hamburger Menu -->
     <div class="menu-toggle" id="mobile-menu" aria-label="Toggle menu" aria-expanded="false">
@@ -32,6 +26,7 @@
     </ul>
   </div>
 </nav>
+
 
 <!-- Link your CSS -->
 <link rel="stylesheet" href="/css/navbar.css">
